I am about to break everything so better commit once first

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
-make function to add an arbitrary number of cloths, done...or at least I think
-make a reset button, DONE ... kinda
 add mouse dragging functionality. Done for solids, doing now for deformable
+add collision
+
+add other deformable simple primitives
 
 //optional but would make the code cleaner
 refactor classes hierarchy
