i kinda haven't commited in a while

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,8 @@ add deformable sphere
 cube collision rework
 friction
 
+TBN matrix
+
 //optional but would make the code cleaner
 refactor classes hierarchy and files
 
